--- a/app/source/scss/main.scss
+++ b/app/source/scss/main.scss
@@ -8,9 +8,8 @@ body {
 	padding: 0;
 	font-size: 18px;
 	line-height: 26px;
-	font-family: "Exo2.0-Thin", "Arial", sans-serif;
+	font-family: "Exo2.0-Thin";
 	color: black;
-	font-weight: 300;
 }
 
 .visually-hidden:not(:focus):not(:active),
@@ -26,4 +25,8 @@ input[type="radio"].visually-hidden {
 	position: absolute;
 	white-space: nowrap;
 	width: 1px;
+}
+
+h1 {
+	font-family: "Exo2.0-Thin";
 }
