--- a/app/source/scss/vars.scss
+++ b/app/source/scss/vars.scss
@@ -12,7 +12,16 @@ $retina-dppx: 1.5dppx;
 
 $white: #ffffff;
 $black: #000000;
-$skyblue: #81b3d2;
-$hover-skyblue: #3d637a;
-$aqua-accent: #80ffcc;
-$pale-orange: #ffcc80;
+
+$card-bg: #f2f2f2;
+
+$def-border: #1698d9; 
+$def-hover: #2ea8e6;
+$selected-border: #d91667;
+$selected-hover: #e62e7a;
+$disable-border: #b3b3b3;
+
+$gray-color: #666666;
+
+$out-stock: #ffff66;
+$action: #1698d9;
